--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "scandiweb_frontend",
   "version": "0.1.0",
+  "proxy": "http://localhost:8000/",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "graphql": "^15.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
