--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "dompurify": "^3.1.4",
     "graphql": "^15.0.0",
+    "html-react-parser": "^5.1.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
+    "swiper": "^11.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
